LEES DIT!!! vorige push notes - Image book 51 geadd - modal gemaakt, popup ipv lelijke slider avoiding the gap issue - summary wordt dus volledig verwijdert in display books! - eventlistener maakt modal dus watch outcha!
- Styling voor catalog is gefixed

--- a/Website/public/stylesheets/styles.css
+++ b/Website/public/stylesheets/styles.css
@@ -539,15 +539,14 @@ h1.catalog__title{
   padding:0;
 }
 
-.book-container {
+#book__container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  width: 20%;
 }
 
 .book {
-  flex: 1 0 calc(10% - 20px);
+  flex: 1 0 calc(25% - 20px);
   margin: 10px;
   text-align: center;
 }
